# tree-sitter

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  generateVSSolution_2022.bat
